worked on transfer to .rmd

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,22 @@
 
+@book{bonan_ecological_2016,
+	address = {New York, NY, USA},
+	edition = {Third edition},
+	title = {Ecological climatology: concepts and applications},
+	isbn = {978-1-107-04377-0 978-1-107-61905-0},
+	shorttitle = {Ecological climatology},
+	publisher = {Cambridge University Press},
+	author = {Bonan, Gordon B.},
+	year = {2016},
+	keywords = {Climatic changes, plant ecophysiology, Vegetation and climate}
+}
+
+@article{mcgregor_tree_nodate,
+	title = {Tree height and drought tolerance traits shape growth responses across droughts in a temperate broadleaf forest},
+	journal = {Target journal: New Phytologist},
+	author = {McGregor, Ian and Helcoski, Ryan and Kunert, Norbert and Tepley, A. J. and Gonzalez-Akre, Erika B. and Herrmann, Valentine and Zailaa, Joseph and Stovall, Atticus E. L. and Bourg, Norman A. and McShea, William J. and Pederson, Neil and Sack, Lawren and Anderson-Teixeira, K.J.}
+}
+
 @article{zellweger_forest_2020,
 	title = {Forest microclimate dynamics drive plant responses to warming},
 	volume = {368},
