--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,13 @@
 
+@book{campbell_introduction_1998,
+	address = {New York},
+	title = {An {Introduction} to {Environmental} {Biophysics}},
+	volume = {second},
+	publisher = {Springer},
+	author = {Campbell, G. and Norman, J.},
+	year = {1998}
+}
+
 @book{bonan_ecological_2016,
 	address = {New York, NY, USA},
 	edition = {Third edition},
@@ -380,4 +389,21 @@ Section: Biological Sciences},
 	note = {Publisher: Oxford Academic},
 	pages = {169--183},
 	file = {Snapshot:/Users/kteixeira/Zotero/storage/P2MH7ZTP/501974.html:text/html}
+}
+
+@article{martin_boundary_1999,
+	title = {Boundary layer conductance, leaf temperature and transpiration of {Abies} amabilis branches},
+	volume = {19},
+	issn = {0829-318X, 1758-4469},
+	url = {https://academic.oup.com/treephys/article-lookup/doi/10.1093/treephys/19.7.435},
+	doi = {10.1093/treephys/19.7.435},
+	language = {en},
+	number = {7},
+	urldate = {2020-07-30},
+	journal = {Tree Physiology},
+	author = {Martin, T. A. and Hinckley, T. M. and Meinzer, F. C. and Sprugel, D. G.},
+	month = jun,
+	year = {1999},
+	pages = {435--443},
+	file = {Full Text:/Users/kteixeira/Zotero/storage/8DR4DYSY/Martin et al. - 1999 - Boundary layer conductance, leaf temperature and t.pdf:application/pdf}
 }
