progress on .Rmd

--- a/references.bib
+++ b/references.bib
@@ -26,6 +26,25 @@
 	author = {McGregor, Ian and Helcoski, Ryan and Kunert, Norbert and Tepley, A. J. and Gonzalez-Akre, Erika B. and Herrmann, Valentine and Zailaa, Joseph and Stovall, Atticus E. L. and Bourg, Norman A. and McShea, William J. and Pederson, Neil and Sack, Lawren and Anderson-Teixeira, K.J.}
 }
 
+@article{bolstad_foliar_1999,
+	title = {Foliar temperature–respiration response functions for broad-leaved tree species in the southern {Appalachians}},
+	volume = {19},
+	issn = {0829-318X},
+	url = {http://academic.oup.com/treephys/article/19/13/871/1623190},
+	doi = {10.1093/treephys/19.13.871},
+	abstract = {Abstract.  We measured leaf respiration in 18 eastern deciduous forest tree species to determine if there were differences in temperature–respiration response f},
+	language = {en},
+	number = {13},
+	urldate = {2020-05-06},
+	journal = {Tree Physiology},
+	author = {Bolstad, Paul V. and Mitchell, Katherine and Vose, James M.},
+	month = nov,
+	year = {1999},
+	note = {Publisher: Oxford Academic},
+	pages = {871--878},
+	file = {Full Text PDF:/Users/kteixeira/Zotero/storage/4UTSAZDZ/Bolstad et al. - 1999 - Foliar temperature–respiration response functions .pdf:application/pdf;Snapshot:/Users/kteixeira/Zotero/storage/Z67KZMSQ/1623190.html:text/html}
+}
+
 @article{zellweger_forest_2020,
 	title = {Forest microclimate dynamics drive plant responses to warming},
 	volume = {368},
@@ -406,4 +425,35 @@ Section: Biological Sciences},
 	year = {1999},
 	pages = {435--443},
 	file = {Full Text:/Users/kteixeira/Zotero/storage/8DR4DYSY/Martin et al. - 1999 - Boundary layer conductance, leaf temperature and t.pdf:application/pdf}
+}
+
+@article{feeley_thermal_2020,
+	title = {The {Thermal} {Tolerances}, {Distributions}, and {Performances} of {Tropical} {Montane} {Tree} {Species}},
+	volume = {3},
+	issn = {2624-893X},
+	url = {https://www.frontiersin.org/article/10.3389/ffgc.2020.00025/full},
+	doi = {10.3389/ffgc.2020.00025},
+	urldate = {2020-07-31},
+	journal = {Frontiers in Forests and Global Change},
+	author = {Feeley, Kenneth and Martinez-Villa, Johanna and Perez, Timothy and Silva Duque, Andres and Triviño Gonzalez, David and Duque, Alvaro},
+	month = mar,
+	year = {2020},
+	file = {Full Text:/Users/kteixeira/Zotero/storage/RQURHJ4Q/Feeley et al. - 2020 - The Thermal Tolerances, Distributions, and Perform.pdf:application/pdf}
+}
+
+@article{zhang_photosynthetic_2012,
+	title = {Photosynthetic thermotolerance of woody savanna species in {China} is correlated with leaf life span},
+	volume = {110},
+	issn = {1095-8290, 0305-7364},
+	url = {https://academic.oup.com/aob/article-lookup/doi/10.1093/aob/mcs172},
+	doi = {10.1093/aob/mcs172},
+	language = {en},
+	number = {5},
+	urldate = {2020-07-31},
+	journal = {Annals of Botany},
+	author = {Zhang, Jiao-Lin and Poorter, L. and Hao, Guang-You and Cao, Kun-Fang},
+	month = oct,
+	year = {2012},
+	pages = {1027--1033},
+	file = {Full Text:/Users/kteixeira/Zotero/storage/PQ6RNT7Z/Zhang et al. - 2012 - Photosynthetic thermotolerance of woody savanna sp.pdf:application/pdf}
 }
