--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -36,21 +36,19 @@ Kristina J. Anderson-Teixeira^1,2^*
 ## Introduction
 
 **As the climate warms, understanding forest responses to temperature is critical.**
-
-
-**Forest canopy microclimate buffering is emerging as important for forest ecology in an era of climate change.**
-
+Globally, temperatures have risen # $^\circ$C since YEAR and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC REF). 
+This is expected to have profound effects on forest biodiversity and ecosystem function (REFS), and the resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will have a critical influence on the future of trajectory of climate change (e.g., Bonan 2008).
 With increase in temperature, we are already seeing that temperate and tropical forest canopies are functioning beyond their photosynthetic threshold (Mau et al. 2020). 
-Other effects of raising temperature on forests are seen in the form of larger trees suffering more during drought (Benett et al. 2015), increased tree mortality, lower tree growth leading to shorter younger trees (Nate McDowell et al.2020?) and large trees dying twice the rate of small trees (Stovall et al. 2019). 
-Additionally, decrease in canopy cover or increase in canopy mortality as a result of increasing temperature (Cornelius Senf et al. 2018) has shown to increase understory temperatures which raises concern for understory species and forest biodiversity (Zellweger et al. 2019, Defrenne et al. 2013).
+This, alongside cliamte change-driven disturbances such as drought, may contribute to globally observed phenomena including trends of increasing tree mortality (McDowell et al. 2020; REFS).
 
-Forest canopies buffer temperatures and other conditions
-     - @zellweger_forest_2020 (Davis et al. 2019) 
+**Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_forest_2020 ; Davis et al. 2019].**
+Globally, we're seeing larger trees suffering more during drought (Benett et al. 2015; Stovall et al. 2019).
+Increasing mortality of large trees, sometimes coupled with reduced tree growth rates, is driving a global trend towards more disturbed forests with younger trees (Nate McDowell et al.2020?). 
+Additionally, decrease in canopy cover or increase in canopy mortality as a result of increasing temperature (Cornelius Senf et al. 2018) has shown to increase understory temperatures which raises concern for understory species and forest biodiversity (Zellweger et al. 2019, Defrenne et al. 2013).
 
 We’re seeing increasing evidence that this impacts the ecology, with potential feedbacks to climate change, especially in protecting cool-acclimated species (Suggitt et al, Scheffers, Defrenne et al. 2013). 
      - @zellweger_forest_2020 
      - (Suggitt et al. 2018, Scheffers et. al 2014)
-    - Larger trees suffer more during drought (Bennett et al. 2015) and may be partially influenced by temperature
 
 Understanding thermal sensitivity in vertical tree gradient and height from top of the canopy to understory will provide crucial insights for how raising temperature affects forest ecology and biodiversity.
 
